tests/ui/match/match-ill-type2.stderr
error[E0308]: mismatched types
  --> $DIR/match-ill-type2.rs:4:9
   |
LL |     match 1i32 {
   |           ---- this expression has type `i32`
LL |         1i32 => 1,
LL |         2u32 => 1,
   |         ^^^^ expected `i32`, found `u32`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
